force-app/main/default/objects/NineDocs__Template__c/NineDocs__Template__c.object-meta.xml
<CustomObject>
    <label>Document Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>