force-app/main/default/objects/NineDocs__Template__c/fields/NineDocs__Content__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__Content__c</fullName>
    <label>Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>