force-app/main/default/objects/NineDocs__Template__c/fields/NineDocs__CSSStaticResource__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__CSSStaticResource__c</fullName>
    <label>CSS Static Resource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>