force-app/main/default/objects/NineDocs__Template__c/fields/NineDocs__Description__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>