force-app/main/default/objects/NineDocs__Template__c/fields/NineDocs__DocumentType__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__DocumentType__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Service Agreement</fullName>
            </value>
            <value>
                <fullName>Inspection Report</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Statement</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>