force-app/main/default/objects/NineDocs__Template__c/fields/NineDocs__FileType__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__FileType__c</fullName>
    <label>File Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PDF</fullName>
            </value>
            <value>
                <fullName>Word</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>