force-app/main/default/objects/NineDocs__Template__c/fields/NineDocs__Footer__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__Footer__c</fullName>
    <inlineHelpText>Footer rich text.</inlineHelpText>
    <label>Footer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>