force-app/main/default/objects/NineDocs__Template__c/fields/NineDocs__FooterSize__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__FooterSize__c</fullName>
    <label>Footer size</label>
    <length>50</length>
    <type>Text</type>
</CustomField>