force-app/main/default/objects/NineDocs__Template__c/fields/NineDocs__Header__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__Header__c</fullName>
    <inlineHelpText>Header rich text.</inlineHelpText>
    <label>Header</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>