force-app/main/default/objects/NineDocs__Template__c/fields/NineDocs__HeaderSize__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__HeaderSize__c</fullName>
    <label>Header size</label>
    <length>50</length>
    <type>Text</type>
</CustomField>