force-app/main/default/objects/NineDocs__Template__c/fields/NineDocs__Icon__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__Icon__c</fullName>
    <formula>IMAGE(
CASE(NineDocs__FileType__c,
&quot;Excel&quot;, &quot;/images/icons/Excel.png&quot;,
&quot;Word&quot;, &quot;/resource/1479487639000/NineDocs__DocIcon&quot;,
&quot;PDF&quot;, &quot;/resource/1479487639000/NineDocs__PdfIcon&quot;,
&quot;HTML&quot;, &quot;/images/icons/html.png&quot;,
&quot;Power Point&quot;, &quot;/images/icons/ppt.png&quot;,
&quot;&quot;),TEXT(NineDocs__FileType__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Icon</label>
    <type>Text</type>
</CustomField>