force-app/main/default/objects/NineDocs__Template__c/fields/NineDocs__IsActive__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>