force-app/main/default/objects/NineDocs__Template__c/listViews/NineDocs__All.listView-meta.xml
<ListView>
    <fullName>NineDocs__All</fullName>
    <columns>NineDocs__ObjectType__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>NineDocs__IsActive__c</columns>
    <columns>NineDocs__DocumentType__c</columns>
    <columns>NineDocs__Footer__c</columns>
    <columns>NineDocs__Header__c</columns>
    <columns>NineDocs__Icon__c</columns>
    <columns>NineDocs__FileType__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>