force-app/main/default/objects/NineDocs__Template__c/listViews/NineDocs__All1.listView-meta.xml
<ListView>
    <fullName>NineDocs__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>