force-app/main/default/objects/NineDocs__Template__c/listViews/NineDocs__Today.listView-meta.xml
<ListView>
    <fullName>NineDocs__Today</fullName>
    <columns>NAME</columns>
    <columns>NineDocs__IsActive__c</columns>
    <columns>NineDocs__Content__c</columns>
    <columns>NineDocs__CSSStaticResource__c</columns>
    <columns>NineDocs__DocumentType__c</columns>
    <columns>NineDocs__FileType__c</columns>
    <columns>NineDocs__Footer__c</columns>
    <columns>NineDocs__Header__c</columns>
    <columns>NineDocs__Icon__c</columns>
    <columns>NineDocs__ObjectType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>